--- a/tasks/Task2/Task2/Task2.csproj
+++ b/tasks/Task2/Task2/Task2.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Feuerwehreinsatz.cs" />
+    <Compile Include="Adresse.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
